Add typescript-rails & install TypeScript definitions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "lindy-repo",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "@types/node": "^10.0.0"
+  }
 }
